/*
 * Copyright (C) 2024 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.android.tools.utp.plugins.deviceprovider.profile.proto;

option java_package = 'com.android.tools.utp.plugins.deviceprovider.profile.proto';
option java_outer_classname = 'DeviceProviderProfileProto';

message TimeSpan {
    // Start of the time span
    int64 span_begin_ms = 1;

    // End of the time span
    int64 span_end_ms = 2;
}

// Provides fields for profiling milestones of the UTP Build process.
message DeviceProviderProfile {

    // The length of time spent providing the device.
    TimeSpan device_provision = 1;

    // The length of time spent releasing the device.
    TimeSpan device_release = 2;
}
